# evolution-simulator

./: Ascendant.cpp  Ascendant.h  CMakeLists.txt  Cell.cpp  Cell.h  CellFactory.cpp  CellFactory.h  CellFactoryImpl.cpp  Clairvoyant.cpp  Clairvoyant.h  DefensiveFightingStrategy.cpp  DefensiveFightingStrategy.h  Exceptions.cpp  Exceptions.h  FightingOutcome.h  FightingStrategy.cpp  FightingStrategy.h  FightingStrategyType.cpp  FightingStrategyType.h  Food.cpp  Food.h  Game.cpp  Game.h  Individual.cpp  Individual.h  IndividualType.cpp  IndividualType.h  Keystone.cpp  Keystone.h  OffensiveFightingStrategy.cpp  OffensiveFightingStrategy.h  README.md  RedBull.cpp  RedBull.h  Suitor.cpp  Suitor.h  Utils.cpp  Utils.h  main.cpp  my_program  (+1 more)
.github/actions/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: cmake.yml
scripts/: run_sanitizers.sh  run_valgrind.sh
